# gui_bibliotheque_audio_Qt

./: .gitignore  CMakeLists.txt  audio_player.cpp  audio_player.h  authManager.cpp  authManager.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  user_account.cpp  user_account.h
